--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="topo">
-        <h2 style="color: white;">Meus Links</h2>
+        <h2 style="color: white; font-size: 2em;">Meus Links</h2>
         <a href="https://chatgpt.com" target="_blank"><div class="item"><img src="src/imgs/chat-gpt.png" alt=""></div></a>
         <a href="https://github.com" target="_blank"><div class="item"><img src="src/imgs/github.png" alt=""></div></a>
         <a href="https://www.linkedin.com/feed/" target="_blank"><div class="item"><img src="src/imgs/linkedin.png" alt=""></div></a>
@@ -19,8 +19,9 @@
     <div id="quadro">
         <div id="inicio">
             <h1>Conteúdo</h1>
-            <div class="postIt" contenteditable="true" style="transform: translatex(-30%);"></div>
-            <div class="postIt" contenteditable="true" style="transform: translatex(30%);"></div>
+            <div class="postIt" contenteditable="true" style="transform: translatex(-50%);"></div>
+            <div class="postIt" contenteditable="true"></div>
+            <div class="postIt" contenteditable="true" style="transform: translatex(50%);"></div>
         </div>
         <div id="meio">
             <h1>Estudando</h1>
